[project]
name = "project-7"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "loguru>=0.7.3",
    "mlflow>=2.22.0",
    "numpy>=2.2.6",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.9.1",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.3",
    "xgboost>=3.0.2",
]
